--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.06.2022 07:16:48</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.06.2022 07:39:31</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Bramborová se zázvorem</strong>
+<strong>Vývar se zeleninou, houbami a bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Masovo-cuketová sekaná s vařeným bramborem a hořčicí</strong>
+<strong>Pečený hermelín s kroketami a chilli majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>Vepřový mexický guláš s rýží</strong>
+<strong>Špagety s rukolovým pestem, sušených rajčaty, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							143,-
