--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.06.2022 08:46:34</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.06.2022 09:10:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -147,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s olivami a susenymi rajcaty, cockovy salat s okurkami, zelenou cibulkou, bylinkami a zeleninou 149</li><li>Peceny filet z cerstveho candata s olivami a susenymi rajcaty, cockovy salat s okurkami, zelenou cibulkou, bylinkami a zeleninou 179</li><li>Burrito s mexickym carnitas {pikantni trhane veprove} s paprikami a goudou, pecene brambory, salatek {L} 149</li><li>Italske houbove rizoto s hovezim flank steakem, parmezanem a lanyzovym olejem, salatek 175</li><li>Zapecene zampiony plnene syrem raclette s listovym spenatem, stouchane brambory se zelenou cibulkou, salatek 149</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s ancovickovo-bazalkovym pestem, bulgurovy salat s quinoou, okurkami, rajcaty a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstve prazmy a nilskeho okouna s ancovickovo-bazalkovym pestem, bulgurovy salat s quinoou, okurkami, rajcaty a zelenymi bylinkami {L} 175</li><li>Indicka korma s masovymi kulickami, kvetakem, orisky, zazvorem a kokosovym mlekem, jasminova ryze 149</li><li>Bramborove gnocchi s toskanskym ragu s hovezi ohankou {bez kosti} na cervenem vine a korenove zelenine s rajcaty, cerstvou bazalkou a parmskou sunkou, zrala gouda, salatek 175</li><li>Indicka brokolicova pakora {cizrnove smazenky} s cibulkou a panc phoron, jogurtovy dip, jahly, salatek 149</li></ol>
 </td>
 </tr>
 </table>
