Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.06.2022 15:12:26</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.06.2022 07:15:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 21. 06. 2022</h5>
+<h5>Středa, 22. 06. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>V OBDOBÍ 27.6. - 10.7. MÁME DOVOLENOU. Budeme se na Vás těšit, odpočatí a plní elánu 11.7.</strong>
@@ -57,64 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 21.6.2022</div>
+<div class="nadpis">Středa 22.6.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Banánový cheesecake </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Mandlová bábovka</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Kuskusový salát, tofu, sušená rajčata, paprika, rajče </div>
-<div class="cena">79 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Čočkový salát s zeleninou, kešu ořechy</div>
-<div class="cena">79 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborový krém s hráškem v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborový krém s hráškem samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Boloňské špagety s bazalkou a parmazánem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso zapečené s rajčaty a mozzarellou, rukolová omáčka jasmínová rýže, polníček <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Tabbouleh salát s grilovaným halloumi sýrem a bylinkovým pestem  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -125,13 +70,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se šlehačkou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z kuřecích prsou a vepřové pečeně, vídenský bramborový salát, citron</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, naše šlehačka</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rizoto z kuřecích prsou se zeleninou, strouhaný sýr, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Filet z divokého lososa na grilu, (exkluzivní kvalita), grilovaná zelenina (lilek, cuketa, karotka, paprika, žampiony), sázené vejce, česneková zakysaná smetana</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou gratinovaný sýrem a broskví, smažené hranolky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine se sušenými tomaty a olivami, filírovaná vepřová panenka, strouhaný parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Staropramen - výčepní 10° 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">27,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Medailonky z vepřové pečeně v sýrovém těstíčku, bramborová kaše s máslem</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí prso na paprice, těstoviny kolínka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský talíř - vepřové karé, moravské uzené, bílá klobása se sýrem a jalapeńos,dušené bílé zelí, kynuté houskové a bramborové knedlíky, bramboráčky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Pečené drůbeží játra se smetanovou omáčkou s pepřem, grusetky promíchané olivovým olejem, sázené vejce</td><td class="menuPrice"> 159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Krůtí špalíček zabalený v anglické slanině, mačkané brambory s cibulí</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná kuřecím gyrosem, česnekovým dresinkem, čerstvou zeleninou, smažené hranolky, tzatziky</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová panenka dorůžova na zeleninovém salátu s olivami, promíchané citrono-olivovým dresinkem, vařené vejce, parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Staropramen - výčepní 10° 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">27,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -139,71 +81,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">120 g</td>
-<td class="title">Marinovaný losos Gravlax balený ve švédském chlebu s rukolou,
-salátovou okurkou, citrusovým zákysem a koprem 1a,3,4,7</td>
-<td class="pricem">179 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Krémová pivní cibulačka s uzeným špekem, tymiánem a sýrovým toastem 1a,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Teriyaki Udon nudle s hovězím flankem, jarní cibulkou, Pak Choi salátem,
-sójovými klíčky a opraženým sezamem 6,11,12</td>
-<td class="pricem">225 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Grilované kachní prso na jarním zeleninovém salátu s fenyklem, glazovanými hruškami
-v červeném víně a redukcí z lesních plodů s rozpečenou bylinkovou bagetou 1a,3,7,12	</td>
-<td class="pricem">249 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Řezy z lotusovým sušenek s mascarpone a pekanovými ořechy 1a,3,7,8e</td>
-<td class="pricem">99 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic PINK<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový / Ginger<br/>
-gin / zázvorový tonic / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Pomerančový / Orange<br/>
-pomerančový gin / tonic / pomeranč / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Fazolová bílá s klobásou a brambory 1a,7,9</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené kuřecí řízečky v panko strouhance s mačkanými brambory s jarní cibulkou a šopským salátem 1a,3,7,12</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Telecí játra na anglické slanině a uzeném špeku s jasmínovou rýží 1a</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová pečeně Sous Vide marinovaná v bylinkách s dijonskou hořčicí na vlažném bramborovém salátu s kukuřicí 1a,3,7,10</td><td class="pricem">149 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
