Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.06.2022 08:45:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.06.2022 09:10:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Vývar se zeleninou, houbami a bramborem</strong>
+<strong>Květáková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Pečený hermelín s kroketami a chilli majonézou</strong>
+<strong>Smažený kuřecí řízek s francouzským salátem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							147,-
 						</span>
 </p>
 <p>
-<strong>Špagety s rukolovým pestem, sušených rajčaty, kuřecím masem a parmazánem</strong>
+<strong>Štika s kari cizrnou a pečeným celerem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							149,-
 						</span>
 </p>
 <p>
@@ -134,7 +134,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s ancovickovo-bazalkovym pestem, bulgurovy salat s quinoou, okurkami, rajcaty a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstve prazmy a nilskeho okouna s ancovickovo-bazalkovym pestem, bulgurovy salat s quinoou, okurkami, rajcaty a zelenymi bylinkami {L} 175</li><li>Indicka korma s masovymi kulickami, kvetakem, orisky, zazvorem a kokosovym mlekem, jasminova ryze 149</li><li>Bramborove gnocchi s toskanskym ragu s hovezi ohankou {bez kosti} na cervenem vine a korenove zelenine s rajcaty, cerstvou bazalkou a parmskou sunkou, zrala gouda, salatek 175</li><li>Indicka brokolicova pakora {cizrnove smazenky} s cibulkou a panc phoron, jogurtovy dip, jahly, salatek 149</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, treska, sled} s petrzelkou a paprikou, cuketovo-rajcatova salsa, smazena zeleninova ryze, salatek {L} 149</li><li>Peceny filet z cerstveho norskeho lososa s cuketovo-rajcatovou salsou, smazena zeleninova ryze, salatek 175</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 149</li><li>Zapeceny jelitovy prejt {nase vyroba}, stouchane brambory se zelenou cibulkou, salatek z kysaneho zeli {L} 149</li><li>Pecena mlada cervena repa s ovcim balkanskym syrem a sazenym vejcem, bulgurovy salat s quinoou a zelenymi bylinkami {L} 149</li></ol>
 </td>
 </tr>
 </table>
