--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.06.2022 08:46:24</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.06.2022 09:10:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -147,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, treska, sled} s petrzelkou a paprikou, cuketovo-rajcatova salsa, smazena zeleninova ryze, salatek {L} 149</li><li>Peceny filet z cerstveho norskeho lososa s cuketovo-rajcatovou salsou, smazena zeleninova ryze, salatek 175</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 149</li><li>Zapeceny jelitovy prejt {nase vyroba}, stouchane brambory se zelenou cibulkou, salatek z kysaneho zeli {L} 149</li><li>Pecena mlada cervena repa s ovcim balkanskym syrem a sazenym vejcem, bulgurovy salat s quinoou a zelenymi bylinkami {L} 149</li></ol>
+<ol><li>Peceny filet z norskeho slede s kaparami a susenymi rajcaty, stredomorsky fusilli salat s paprikami, cuketami a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstve norske tresky s kaparami a susenymi rajcaty, stredomorsky fusilli salat s paprikami, cuketami a zelenymi bylinkami {L} 175</li><li>Nam sod – thajsky salat s pikantnim veprovym masem, jasminovou ryzi, cerstvou zeleninou a bylinkami a sladkokyselou limetkovou zalivkou 149</li><li>Indicke srnci birjany z basmati ryze se zeleninou, zazvorem a vonavym korenim, jogurtovy dip, salatek 175</li><li>Smazeny kapustovy rizek s goudou, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 149</li></ol>
 </td>
 </tr>
 </table>
