Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.06.2022 08:15:11</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.06.2022 08:44:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,21 +14,14 @@
 						</span>
 </p>
 <p>
-<strong>Brokolicová krémová</strong>
+<strong>Gulášovka s hovězím</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Linguiny s krémovou cuketou, olivami,slaninou a parmazánem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>Vepřový plátek na žampionech a slanině se šťouchaným bramborem</strong>
+<strong>Znojemská hovězí pečeně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
@@ -59,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 24.6.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mini panna cotta z kokosového mléka s malinami</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bio jogutové mléko - vanilka </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bio jogutové mléko - borůvka</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mango cheesecake</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>250g Pečené kuřecí stehno, bramborová kaše, kukuřičný klas s bylinkovým máslem, salát z červené řepy <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Stir fry rýžové nudle s vajíčkem a zeleninou, restované žampiony, arašídy, koriandr <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
