--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.06.2022 08:44:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.06.2022 09:11:00</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Pečený filet z atlantického hejka, zeleninový kuskus, citronovo hořčične pesto, salátek{L} 149</li><li>Pečený filet z čerstvého mořského vlka, bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citronovo hořčične pesto {L} 175</li><li>Krůtí medailonky v citronové omáčce po jihoindicku se zázvorem kokosovým mlékem, jasmínová rýže, salátek 149</li><li>Smažené řízečky z panenské svíčkové,  bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citron, salátek 175</li><li>Zapečené cukety plněné červenou čočkou s červenou řepou, jogurtový dip, salátek {L} 149</li></ol>
+<ol><li>Pečený filet z atlantického hejka, zeleninový kuskus, citronovo hořčične pesto s koprem, salátek{L} 149</li><li>Pečený filet z čerstvého mořského vlka, bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citronovo hořčične pesto s koprem{L} 175</li><li>Krůtí medailonky v citronové omáčce po jihoindicku se zázvorem kokosovým mlékem, jasmínová rýže, salátek 149</li><li>Smažené řízečky z panenské svíčkové,  bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citron, salátek 175</li><li>Zapečené cukety plněné červenou čočkou s červenou řepou, jogurtový dip, salátek {L} 149</li></ol>
 </td>
 </tr>
 </table>
